--- a/app/src/main/res/layout/activity_main_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_main_recyclerview_item.xml
@@ -15,6 +15,21 @@
         android:layout_marginStart="@dimen/margin_medium"
         tools:text="Header" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/margin_medium">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_url"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_search"
+            android:scaleType="centerCrop"
+            android:layout_marginEnd="@dimen/margin_small"/>
+
     <TextView
         android:id="@+id/description_textview_recycler_item"
         style="@style/BaseTextStyle"
@@ -22,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_medium"
         tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
+    </LinearLayout>
 
     <View xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
