--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="color_search_view_background">#FCEEEEEE</color>
+    <color name="color_accent">#D81B60</color>
+    <color name="color_button">#FF74A3</color>
 </resources>
